fix: adjust font size for subtitle in formacao section to improve readability

--- a/css/formacao.css
+++ b/css/formacao.css
@@ -31,7 +31,7 @@
   word-break: break-all;
   text-align: center;
   line-height: 1.4; 
-  font-size: 6rem; 
+  font-size: 4rem; 
   margin: 0 auto; 
 }
 
